modificacion page panes

--- a/pages/panes.html
+++ b/pages/panes.html
@@ -94,34 +94,34 @@
         <section class="panes-cards">
             <div class="cont-cards">
                 <div class="card" style="width: 18rem;">
-                    <img src="../img/produpan.jpg" class="card-img-top" alt="producto">
+                    <img src="../img/pizzaprovo.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
-                        <h5 class="card-title">Pan</h5>
-                        <p class="card-text">Pan integral con semillas.</p>
+                        <h5 class="card-title">Pizza</h5>
+                        <p class="card-text">Pizza de muzzarella y provolone.</p>
                         <a href="" class="btn btn-danger">Comprar</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="../img/produfocacha.jpg" class="card-img-top" alt="producto">
+                    <img src="../img/pizzacebolla.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
-                        <h5 class="card-title">Focacha</h5>
-                        <p class="card-text">Focacha de masa madre con verduras.</p>
+                        <h5 class="card-title">Pizza</h5>
+                        <p class="card-text">Pizza de Cebolla morada y queso muzzarella</p>
                         <a href="" class="btn btn-danger">Comprar</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="../img/produfocacha2.jpg" class="card-img-top" alt="producto">
+                    <img src="../img/pizzajcrudo.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
-                        <h5 class="card-title">Focacha</h5>
-                        <p class="card-text">Focacha fermentada al vino blanco.</p>
+                        <h5 class="card-title">Pizza</h5>
+                        <p class="card-text">Pizza de muzzarella y jamoon crudo</p>
                         <a href="./pages/tienda.html" class="btn btn-danger">Comprar</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="../img/produpan.jpg" class="card-img-top" alt="producto">
+                    <img src="../img/pizzacantinpalo.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
-                        <h5 class="card-title">Pan</h5>
-                        <p class="card-text">Pan de masa madre.</p>
+                        <h5 class="card-title">Pizza</h5>
+                        <p class="card-text">Pizza de muzzarella y cantinpalo</p>
                         <a href="./pages/tienda.html" class="btn btn-danger">Comprar</a>
                     </div>
                 </div>
