--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nosotros.Barracas.food</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-danger">
+            <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -71,61 +71,37 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <section class="page-nosotros">
-            <h1>
-                CONOCENOS:
-            </h1>
-        </section>
-        <section class="nosotros-titulos">
-            <div class="nosotros-titulos_contenedor">
-                <div>
-                    <h2>
-                    ¿Quienes somos?
-                    </h2>
-                    <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore voluptatibus. Error, illo
-                    labore! Inventore, quia veritatis ipsam officiis earum adipisci sunt suscipit iusto nihil eaque
-                    distinctio dolores consequuntur nemo.
-                    </p>
-                </div>
-                    <img src="../img/canelotis.jpg" alt="">
-            </div>
-        </section>
-        <section class="mas-nosotros">
-            <div>
-                <h2>¿Como Empezamos?</h2>
+       <section class="nosotros">
+           <div>
+               <h1>
+                   ¿Como empezamos?
+                </h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla animi ratione. Dignissimos
-                    facilis, sunt nam eos id eius nemo accusantium a quisquam magnam assumenda consectetur error!
-                    Similique, culpa consectetur!
+                    Luego de la pandemia, al ser un grupo de hermanos que se dedico siempre a la gastronomia, nos decidimos por crear un emprendimiento de pastas frescas para tener en el freezer.
                 </p>
             </div>
-        </section>
-        <section class="tarjetas-nosotros">
-            <div class="titulo.tarjeta">
-                <h2>
-                    A demas de pastas tambien:
-                </h2>
-            </div>
-            <div class="container-tarjetas">
+            <img src="../img/pastanosotros.jpg" alt="pasta">
+            </section>
+            <section class="nosotros-2">
                 <div>
-                    <h3>Canelottis de Salmon</h3>
-                    <img src="../img/caneloti.jpg" width="120" alt="foto canelotis">
-                    <a href="">Comprar</a>
+                    <h2>
+                        ¿Quienes somos?
+                    </h2>
+                    <p>
+                        Somos dos hermanos, Lucila y Maximo Gonzalez, oriundos del barrio de Barracas (CABA) y luego de una vida dededicada a la gastronomia en general, decidimos comenzar con este proyecto luego de la conocida pandemia que irrumpio en el mundo.
+                    </p>
                 </div>
-                <div>
-                    <h3>Ravioles de Bondiola braseada</h3>
-                    <img src="../img/raviol.jpg" width="100" alt="foto ravioles">
-                    <a href="">Comprar</a>
-                </div>
-                <div>
-                    <h3>Sorrentinos de Jamon y Queso</h3>
-                    <img src="../img/sorrentinos.jpg" width="100" alt="foto sorrentinos">
-                    <a href=>Comprar</a>
-                </div>
-            </div>
+                    <img src="../img/pastanosotros2.jpg" alt="pasta">
 
-        </section>
+            </section>
+            <section class="trabaja-nosotros">
+                <h2>
+                ¿Te interesaria trabajar con nosotros?
+                </h2>
+                <p>
+                    Registrate en la pagina de contacto y contanos porque te sumarias a nuestro equipo de trabajo.
+                </p>
+            </section>
     </main>
     <footer>
         <div class="logo">
