--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <section class="produ">
         <h2>Productos Destacados</h2>
-        <div class="contenedor-cards">
+        <div class="produ__cards">
             <div class="card" style="width: 18rem;">
                 <img src="./img/canelotiss.jpg" class="card-img-top" alt="producto">
                 <div class="card-body">
@@ -89,11 +89,11 @@
 </div>
 
     <section class="mas">
-        <div class="massobrenosotros">
+        <div class="mas__nosotros">
         <h2>Mas sobre nosotros</h2>
         <p>Cocina especializada en pastas artesanales y productos congelados listos para cocinar y comer.</p>
         </div>
-        <div class="grid-container">
+        <div class="mas__grid">
             <div class="grid-item primer-item">
                 <img src="./img/ñoquipanceta.jpg" alt="">
             </div>
@@ -124,10 +124,10 @@
         <img src="./img/whatsapp.png" width="70px" alt="logo wpp">
     </div>
     <footer>
-        <div class="logo">
+        <div class="footer__logo">
             <img src="./img/logo.jpg" width="50" alt="logo">
         </div>
-        <div class="container-footer">
+        <div class="footer__container">
             <ul>
                 <li>Todos los derechos reservados</li>
                 <li>Servicios</li>
@@ -136,7 +136,7 @@
             </ul>
             
         </div>
-        <div class="contenedorlogos">
+        <div class="footer__logos">
             <a href="https://www.facebook.com/BarracasFood"><img src="./img/facebook.png" width="50" alt="logo fb"></a>
             <a href="https://www.instagram.com/barracas.food/"><img src="./img/instagram.png"  width="50"  alt="logo intagram"></a>
             <a href="https://www.tiktok.com"><img src="./img/tiktok.png" width="50" alt="logo tiktok"></a>
