--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -49,7 +49,7 @@
     </header>
     <main>
         <section class="tienda">
-            <div class="tienda-titulo">
+            <div class="tienda__titulo">
                 <h2>
                     Tienda
                 </h2>
@@ -60,7 +60,7 @@
                     12 unidades
                 </h4>
             </div>
-            <div class="lista-imagen">
+            <div class="tienda__lista">
                 <ul>
                     <li>Sorrentinos rellenos de jamon cocido y queso muzzarella.  <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
                     <li>Sorrentinos rellenos de Cuatro quesos y nuez.  <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
@@ -71,7 +71,7 @@
 
         </section>
         <section class="tienda">
-            <div class="tienda-titulo">
+            <div class="tienda__titulo">
                 <h3>
                     Ravioles
                 </h3>
@@ -79,7 +79,7 @@
                     12 unidades
                 </h4>
             </div>
-            <div class="lista-imagen-2">
+            <div class="tienda__lista-2">
                 <ul>
                     <li>Raviolones rellenos de bondiola braseada.<button type="button" class="btn btn-dark">Comprar ($500)</button></li>
                     <li>Raviolones rellenos de espinacas, ricota y queso muzzarella.<button type="button" class="btn btn-dark">Comprar ($500)</button></li>
@@ -90,7 +90,7 @@
 
         </section>
         <section class="tienda">
-            <div class="tienda-titulo">
+            <div class="tienda__titulo">
                 <h3>
                     Ñoquis de papa
                 </h3>
@@ -98,7 +98,7 @@
                     500grs/kilo
                 </h4>
             </div>
-            <div class="lista-imagen">
+            <div class="tienda__lista">
                 <ul>
                     <li>Ñoquis de papa.   <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
                     <li>Ñoquis de espinaca.   <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
@@ -109,7 +109,7 @@
             </div>
         </section>
         <section class="tienda">
-            <div class="tienda-titulo">
+            <div class="tienda__titulo">
                 <h3>
                     Chipa
                 </h3>
@@ -117,7 +117,7 @@
                     Y empandas
                 </h4>
             </div>
-            <div class="lista-imagen-2">
+            <div class="tienda__lista-2">
                 <ul>
                     <li>Chipa 500grs/kilo. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
                     <li>Empanadas de carne cortada a cuchillo. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
@@ -126,27 +126,27 @@
             </div>
         </section>
         <section class="tienda">
-            <div class="tienda-titulo">
+            <div class="tienda__titulo">
                 <h3>
                     Postres.
                 </h3>
             </div>
-            <div class="lista-imagen">
+            <div class="tienda__lista">
                 <ul>
                     <li>Tiramisu. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
                     <li>Cheescake. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
                     <li>Chocotorta. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
 
                 </ul>
-                <img src="../img/tiramisu.jpg" alt="nioquis">
+                <img src="../img/tiramisu.jpg" alt="tirami">
             </div>
         </section>
     </main>
     <footer>
-        <div class="logo">
+        <div class="footer__logo">
             <img src="../img/logo.jpg" width="50" alt="logo">
         </div>
-        <div class="container-footer">
+        <div class="footer__container">
             <ul>
                 <li>Todos los derechos reservados</li>
                 <li>Servicios</li>
@@ -155,7 +155,7 @@
             </ul>
 
         </div>
-        <div class="contenedorlogos">
+        <div class="footer__logos">
             <a href="https://www.facebook.com/BarracasFood"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
             <a href="https://www.instagram.com/barracas.food/"><img src="../img/instagram.png" width="50"
                     alt="logo intagram"></a>
