--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -104,10 +104,10 @@
             </section>
     </main>
     <footer>
-        <div class="logo">
+        <div class="footer__logo">
             <img src="../img/logo.jpg" width="50" alt="logo">
         </div>
-        <div class="container-footer">
+        <div class="footer__container">
             <ul>
                 <li>Todos los derechos reservados</li>
                 <li>Servicios</li>
@@ -116,7 +116,7 @@
             </ul>
 
         </div>
-        <div class="contenedorlogos">
+        <div class="footer__logos">
             <a href="https://www.facebook.com/BarracasFood"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
             <a href="https://www.instagram.com/barracas.food/"><img src="../img/instagram.png" width="50"
                     alt="logo intagram"></a>
