--- a/pages/panes.html
+++ b/pages/panes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +51,7 @@
             <h2>Harinas organicas</h2>
         </section>
         <section class="panes-cards">
-            <div class="cont-cards">
+            <div class="panes-cards__contenedor">
                 <div class="card" style="width: 18rem;">
                     <img src="../img/produpan.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
@@ -89,10 +88,9 @@
         </section>
         <section class="panes-dos">
             <h2>Pizzas de Masa madre</h2>
-
         </section>
         <section class="panes-cards">
-            <div class="cont-cards">
+            <div class="panes-cards__contenedor">
                 <div class="card" style="width: 18rem;">
                     <img src="../img/pizzaprovo.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
@@ -134,10 +132,10 @@
     </div>
 
     <footer>
-        <div class="logo">
+        <div class="footer__logo">
             <img src="../img/logo.jpg" width="50" alt="logo">
         </div>
-        <div class="container-footer">
+        <div class="footer__container">
             <ul>
                 <li>Todos los derechos reservados</li>
                 <li>Servicios</li>
@@ -146,7 +144,7 @@
             </ul>
 
         </div>
-        <div class="contenedorlogos">
+        <div class="footer__logos">
             <a href="https://www.facebook.com/BarracasFood"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
             <a href="https://www.instagram.com/barracas.food/"><img src="../img/instagram.png" width="50"
                     alt="logo intagram"></a>
