--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -91,8 +91,7 @@
                         Somos dos hermanos, Lucila y Maximo Gonzalez, oriundos del barrio de Barracas (CABA) y luego de una vida dededicada a la gastronomia en general, decidimos comenzar con este proyecto luego de la conocida pandemia que irrumpio en el mundo.
                     </p>
                 </div>
-                    <img src="../img/pastanosotros2.jpg" alt="pasta">
-
+                <img src="../img/pastanosotros2.jpg" alt="">
             </section>
             <section class="trabaja-nosotros">
                 <h2>
