--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link dropdown-toggle" href="./pages/contacto.html" role="button">
+                                <a class="nav-link" href="./pages/contacto.html" role="button">
                                     Contacto
                                 </a>
                             </li>
@@ -39,7 +39,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">Buscar</button>
+                            <button class="btn btn-outline-danger" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
@@ -137,9 +137,9 @@
             
         </div>
         <div class="footer__logos">
-            <a href="https://www.facebook.com/BarracasFood"><img src="./img/facebook.png" width="50" alt="logo fb"></a>
-            <a href="https://www.instagram.com/barracas.food/"><img src="./img/instagram.png"  width="50"  alt="logo intagram"></a>
-            <a href="https://www.tiktok.com"><img src="./img/tiktok.png" width="50" alt="logo tiktok"></a>
+            <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="./img/facebook.png" width="50" alt="logo fb"></a>
+            <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="./img/instagram.png"  width="50"  alt="logo intagram"></a>
+            <a href="https://www.tiktok.com"><img src="./img/tiktok.png" target="_blank" width="50" alt="logo tiktok"></a>
         </div>
         
     </footer>
