--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,13 +22,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
+                                <a class="nav-link" aria-current="page" href="./tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="./contacto.html" role="button">
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="./contacto.html" role="button">
                                     Contacto
                                 </a>
                             </li>
@@ -38,7 +38,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">Buscar</button>
+                            <button class="btn btn-outline-danger" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
@@ -83,10 +83,10 @@
     
             </div>
             <div class="footer__logos">
-                <a href="https://www.facebook.com/BarracasFood"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
-                <a href="https://www.instagram.com/barracas.food/"><img src="../img/instagram.png" width="50"
+                <a href="https://www.facebook.com/BarracasFood"target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
+                <a href="https://www.instagram.com/barracas.food/"target="_blank"><img src="../img/instagram.png" width="50"
                         alt="logo intagram"></a>
-                <a href="https://www.tiktok.com"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
+                <a href="https://www.tiktok.com"target="_blank"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
             </div>
     
         </footer>
