--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -41,7 +41,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">Buscar</button>
+                            <button class="btn btn-outline-danger" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
@@ -156,10 +156,10 @@
 
         </div>
         <div class="footer__logos">
-            <a href="https://www.facebook.com/BarracasFood"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
-            <a href="https://www.instagram.com/barracas.food/"><img src="../img/instagram.png" width="50"
+            <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
+            <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png" width="50"
                     alt="logo intagram"></a>
-            <a href="https://www.tiktok.com"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
+            <a href="https://www.tiktok.com" target="_blank"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
         </div>
 
     </footer>
