--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,10 +25,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
+                                <a class="nav-link" aria-current="page" href="./tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                                <a class="nav-link active" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contacto.html" role="button">
@@ -116,10 +116,10 @@
 
         </div>
         <div class="footer__logos">
-            <a href="https://www.facebook.com/BarracasFood"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
-            <a href="https://www.instagram.com/barracas.food/"><img src="../img/instagram.png" width="50"
+            <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
+            <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png" width="50"
                     alt="logo intagram"></a>
-            <a href="https://www.tiktok.com"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
+            <a href="https://www.tiktok.com" target="_blank"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
         </div>
 
     </footer>
