--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-danger">
+            <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
