--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -153,14 +153,17 @@
                 <li>Como comprar?</li>
                 <li>Politica de privacidad</li>
             </ul>
-
+            <div class="footer__logos">
+                <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
+                <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png"  width="50"  alt="logo intagram"></a>
+                <a href="https://www.tiktok.com"><img src="../img/tiktok.png" target="_blank" width="50" alt="logo tiktok"></a>
+            </div>
         </div>
-        <div class="footer__logos">
-            <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
-            <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png" width="50"
-                    alt="logo intagram"></a>
-            <a href="https://www.tiktok.com" target="_blank"><img src="../img/tiktok.png" width="50" alt="logo tiktok"></a>
+        <div class="footer__iframe">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        
+    </footer>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
