--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-ligh">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -22,19 +22,19 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./pages/tienda.html">Tienda</a>
+                            <li class="nav-item bg-danger">
+                                <a class="nav-link text-white" aria-current="page" href="./pages/tienda.html">Tienda</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                            <li class="nav-item bg-danger bg-opacity-50">
+                                <a class="nav-link text-white" href="./pages/nosotros.html">Nosotros</a>
                             </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./pages/contacto.html" role="button">
+                            <li class="nav-item bg-danger ">
+                                <a class="nav-link text-white" href="./pages/contacto.html" role="button">
                                     Contacto
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./pages/panes.html" >Panes</a>
+                            <li class="nav-item bg-danger">
+                                <a class="nav-link text-white" href="./pages/panes.html" >Panes</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div class="footer__iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         
     </footer>
