--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,6 +64,17 @@
                     <input type="submit" value="Registrarse">
                 </form>
             </section>
+            <section class="galeria">
+                <div>
+                    <img src="../img/alamos.jpg" alt="pasta">
+                </div>
+                <div class="galeria__logo">
+                    <img src="../img/logo.jpg" alt="">
+                </div>
+                <div>
+                    <img src="../img/focachafondo.jpg" alt="">
+                </div>
+            </section>
             <section class="slider-contacto">
 
             </section>
