--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -8,7 +8,7 @@
     <title>Tienda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./panes.html" >Panes</a>
+                                <a class="nav-link" href="./panes.html">Panes</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
@@ -49,97 +49,120 @@
     </header>
     <main>
         <section class="tienda">
-            <div class="tienda__titulo">
-                <h2>
-                    Tienda
-                </h2>
-                <h3>
-                    Sorrentinos
-                </h3>
-                <h4>
-                    12 unidades
-                </h4>
-            </div>
-            <div class="tienda__lista">
-                <ul>
-                    <li>Sorrentinos rellenos de jamon cocido y queso muzzarella.  <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Sorrentinos rellenos de Cuatro quesos y nuez.  <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Sorrentinos rellenos que Tomate, Albahaca y queso muzzarella.  <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                </ul>
-                <img src="../img/sorrenvarios.jpg" alt="varios sorrentinos">
+            <h1>Tienda</h1>
+            <h2>Sorrentinos</h2>
+
+        </section>
+        <section class="sorrentinos">
+            <div class="sorrentinos__sorrentino">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/sorrenrojo.jpg" class="card-img-top" alt="sorrentino">
+                    <div class="card-body">
+                      <h5 class="card-title">Sorrentino</h5>
+                      <p class="card-text">Relleno de queso tomate y Albahaca. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">1500$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="../img/sorrenrosa.jpg" class="card-img-top" alt="raviol">
+                    <div class="card-body">
+                      <h5 class="card-title">Sorrentinos</h5>
+                      <p class="card-text">Rellenos de Calabaza y Muzzarella. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">1800$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="../img/sorrentienda.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Sorrentino</h5>
+                      <p class="card-text">Relleno de Jamon cocido y Muzarella. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">1800$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="../img/sorrentinoazul.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Sorrentino</h5>
+                      <p class="card-text">Relleno de Roquefort y nuez. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">2000$</a>
+                    </div>
+                  </div>
             </div>
 
         </section>
-        <section class="tienda">
-            <div class="tienda__titulo">
-                <h3>
-                    Ravioles
-                </h3>
-                <h4>
-                    12 unidades
-                </h4>
+        <section class="ravioles">
+            <h2>Ravioles</h2>
+            <div class="ravioles__raviol">
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/ravioltienda.jpg" class="card-img-top" alt="raviol">
+                    <div class="card-body">
+                      <h5 class="card-title">Ravioles</h5>
+                      <p class="card-text">Rellenos de espinaca y parmesano. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">1800$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="../img/raviolito.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Ravioles</h5>
+                      <p class="card-text">Rellenos de Cuatro quesos. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">1800$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="../img/raviolbondiola.jpg" class="card-img-top" alt="raviltienda">
+                    <div class="card-body">
+                      <h5 class="card-title">Ravioles</h5>
+                      <p class="card-text">Rellenos de bondiola braseada . 12 unidades</p>
+                      <a href="#" class="btn btn-danger">1500$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="../img/capeletinis.jpg" class="card-img-top" alt="capeletinis">
+                    <div class="card-body">
+                      <h5 class="card-title">Capeletinis</h5>
+                      <p class="card-text">Capeletinis rellenos de ternera y parmesano. 12 unidades</p>
+                      <a href="#" class="btn btn-danger">2000$</a>
+                    </div>
+                  </div>
             </div>
-            <div class="tienda__lista-2">
-                <ul>
-                    <li>Raviolones rellenos de bondiola braseada.<button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Raviolones rellenos de espinacas, ricota y queso muzzarella.<button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Raviolones rellenos de pollo y espinacas.<button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                </ul>
-                <img src="../img/ravioltienda.jpg" alt="raviol">
+        </section>
+        <section class="nioquis">
+            <h3>Ñoquis</h3>
+            <div class="nioquis__nioqui">
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/ñoquipanceta.jpg" class="card-img-top" alt="Ñoquis">
+                    <div class="card-body">
+                      <h5 class="card-title">Ñoquis</h5>
+                      <p class="card-text">Ñoquis de papa rellenos de queso. 500grs</p>
+                      <a href="#" class="btn btn-danger">1200$</a>
+                    </div>
+                  </div><div class="card" style="width: 18rem;">
+                    <img src="../img/ñoquisvarios.jpg" class="card-img-top" alt="ñoquis">
+                    <div class="card-body">
+                      <h5 class="card-title">Ñoquis</h5>
+                      <p class="card-text">Ñoquis de calabaza, espinaca y remolacha. 500grs</p>
+                      <a href="#" class="btn btn-danger">1400$</a>
+                    </div>
+                  </div><div class="card" style="width: 18rem;">
+                    <img src="../img/ñoqui.jpg" class="card-img-top" alt="ñoqui">
+                    <div class="card-body">
+                      <h5 class="card-title">Ñoquis</h5>
+                      <p class="card-text">Ñoquis solamente de harina y papa. 500grs</p>
+                      <a href="#" class="btn btn-danger">1200$</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 300px; height: 400px;">
+                    <img src="../img/ñoquicala.jpg" class="card-img-top" alt="ñoqui">
+                    <div class="card-body">
+                      <h5 class="card-title">Ñoquis</h5>
+                      <p class="card-text">Ñoquis de harina y calabaza. 500grs</p>
+                      <a href="#" class="btn btn-danger">1500$</a>
+                    </div>
+                  </div>
             </div>
 
-        </section>
-        <section class="tienda">
-            <div class="tienda__titulo">
-                <h3>
-                    Ñoquis de papa
-                </h3>
-                <h4>
-                    500grs/kilo
-                </h4>
-            </div>
-            <div class="tienda__lista">
-                <ul>
-                    <li>Ñoquis de papa.   <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Ñoquis de espinaca.   <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Ñoquis rellenos de queso.   <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Ñoquis de espinaca rellenos de queso.  <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                </ul>
-                <img src="../img/ñoquisvarios.jpg" alt="nioquis">
-            </div>
-        </section>
-        <section class="tienda">
-            <div class="tienda__titulo">
-                <h3>
-                    Chipa
-                </h3>
-                <h4>
-                    Y empandas
-                </h4>
-            </div>
-            <div class="tienda__lista-2">
-                <ul>
-                    <li>Chipa 500grs/kilo. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Empanadas de carne cortada a cuchillo. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                </ul>
-                <img src="../img/chipa.jpg" alt="chipa">
-            </div>
-        </section>
-        <section class="tienda">
-            <div class="tienda__titulo">
-                <h3>
-                    Postres.
-                </h3>
-            </div>
-            <div class="tienda__lista">
-                <ul>
-                    <li>Tiramisu. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Cheescake. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-                    <li>Chocotorta. <button type="button" class="btn btn-dark">Comprar ($500)</button></li>
-
-                </ul>
-                <img src="../img/tiramisu.jpg" alt="tirami">
-            </div>
         </section>
     </main>
     <footer>
@@ -154,18 +177,23 @@
                 <li>Politica de privacidad</li>
             </ul>
             <div class="footer__logos">
-                <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
-                <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png"  width="50"  alt="logo intagram"></a>
-                <a href="https://www.tiktok.com"><img src="../img/tiktok.png" target="_blank" width="50" alt="logo tiktok"></a>
+                <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png"
+                        width="50" alt="logo fb"></a>
+                <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png"
+                        width="50" alt="logo intagram"></a>
+                <a href="https://www.tiktok.com"><img src="../img/tiktok.png" target="_blank" width="50"
+                        alt="logo tiktok"></a>
             </div>
         </div>
         <div class="footer__iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar"
+                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        
-    </footer>
 
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
