--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/estilos.css">
+        <meta name="description" content="Tienda de pastas y panes caseros, hechos con harinas organicas, y productos frescos listos para cocinar en tu casa.">
+        <meta name="keywords" content="pasta, panes, salado, comida, cena, casero, ravioles, sorrentinos, ñoquis, masa madre, harina, organico">
+        <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
 </head>
 </head>
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-ligh">
+            <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -22,19 +25,19 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item bg-danger">
-                                <a class="nav-link text-white" aria-current="page" href="./pages/tienda.html">Tienda</a>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./pages/tienda.html">Tienda</a>
                             </li>
-                            <li class="nav-item bg-danger bg-opacity-50">
-                                <a class="nav-link text-white" href="./pages/nosotros.html">Nosotros</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                             </li>
-                            <li class="nav-item bg-danger ">
-                                <a class="nav-link text-white" href="./pages/contacto.html" role="button">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/contacto.html" role="button">
                                     Contacto
                                 </a>
                             </li>
-                            <li class="nav-item bg-danger">
-                                <a class="nav-link text-white" href="./pages/panes.html" >Panes</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/panes.html" >Panes</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
