--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
     </head>
 <body>
     <header>
@@ -61,7 +62,7 @@
                     <input type="checkbox" id="aceptar_terminos" name="aceptar_terminos" required>
                     <label for="aceptar_terminos">Acepto los términos y condiciones</label><br>
         
-                    <input type="submit" value="Registrarse">
+                    <input type="submit" value="Registrarse" class="boton">
                 </form>
             </section>
             <section class="galeria">
