--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/estilos.css">
         <meta name="description" content="Tienda de pastas y panes caseros, hechos con harinas organicas, y productos frescos listos para cocinar en tu casa.">
-        <meta name="keywords" content="pasta, panes, salado, comida, cena, casero, ravioles, sorrentinos, ñoquis, masa madre, harina, organico">
+        <meta name="keywords" content=" barracas, food, pasta, panes, salado, comida, cena, casero, ravioles, sorrentinos, ñoquis, masa madre, harina, organico">
         <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
 </head>
 </head>
