--- a/pages/panes.html
+++ b/pages/panes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +48,7 @@
             </nav>
     </header>
     <main>
-        <section class="panes">     
+        <section class="panes">
             <h1>Panes de masa madre</h1>
             <h2>Harinas organicas</h2>
         </section>
@@ -125,7 +126,7 @@
                     </div>
                 </div>
             </div>
-        
+
 
     </main>
     <div class="fixed">
@@ -144,16 +145,25 @@
                 <li>Politica de privacidad</li>
             </ul>
             <div class="footer__logos">
-                <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png" width="50" alt="logo fb"></a>
-                <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png"  width="50"  alt="logo intagram"></a>
-                <a href="https://www.tiktok.com"><img src="../img/tiktok.png" target="_blank" width="50" alt="logo tiktok"></a>
+                <a href="https://www.facebook.com/BarracasFood" target="_blank"><img src="../img/facebook.png"
+                        width="50" alt="logo fb"></a>
+                <a href="https://www.instagram.com/barracas.food/" target="_blank"><img src="../img/instagram.png"
+                        width="50" alt="logo intagram"></a>
+                <a href="https://www.tiktok.com"><img src="../img/tiktok.png" target="_blank" width="50"
+                        alt="logo tiktok"></a>
             </div>
         </div>
         <div class="footer__iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.083489897696!2d-58.39206712432833!3d-34.652594372936825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c7aba378b%3A0xa6de2661da7f7f5f!2sR%C3%ADo%20Cuarto%203042%2C%20C1292ABR%20CABA!5e0!3m2!1ses-419!2sar!4v1692127665544!5m2!1ses-419!2sar"
+                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        
+
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 
 </body>
