--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -10,6 +10,9 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
+    <meta name="description" content="Barracas food tienda de Panes y pizzas elaborados con masa madre de harina organica, ravioles, sorrentinos, ñoquis y mas.">
+    <meta name="keywords" content=" pan, panes, pizza, muzzarella, barracas, food, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso producto, comprar, tienda">
+    <title>BarracasFood tienda de comida listo para cocinar.</title>
 </head>
 
 <body>
