--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barracas food</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/estilos.css">
-        <meta name="description" content="Tienda de pastas y panes caseros, hechos con harinas organicas, y productos frescos listos para cocinar en tu casa.">
+        <meta name="description" content="Tienda de pastas y panes caseros, hechos con harinas organicas, y productos frescos listos para cocinar en tu casa. Somos barracas food consulta por mas info.">
         <meta name="keywords" content=" barracas, food, pasta, panes, salado, comida, cena, casero, ravioles, sorrentinos, ñoquis, masa madre, harina, organico">
         <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
+        <title>Barracas food  / Tienda de pastas artesanales.</title>
 </head>
 </head>
 <body>
