--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto.BARRACAS.FOOD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
+    <meta name="description" content="Barracas food suscribite a nuestra pagina para obtenes novedades sobre nuevas resetas.">
+    <meta name="keywords" content=" contacto, barracas, suscribite, correo, contraseña, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso">
+    <title>BarracasFood Panes Suscribite y recibi novedades.</title>
 </head>
 
 <body>
@@ -51,7 +53,7 @@
     <body>
         <main class="contacto">
             <section class="contacto__formulario">
-                <h2>Registrate en Barracas Food</h2>
+                <h1>Registrate en Barracas Food</h2>
                 <form action="/procesar_registro" method="post">
                     <label for="nombre_completo">Nombre completo:</label>
                     <input type="text" id="nombre_completo" name="nombre_completo" required><br>
