--- a/pages/panes.html
+++ b/pages/panes.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
+    <meta name="description" content="Barracas food: Panes y pizzas elaborados con masa madre de harina organica, ubicados en capital federal">
+    <meta name="keywords" content=" pan, panes, pizza, muzzarella, barracas, food, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso">
+    <title>BarracasFood Panes de masa madre con harinas organicas.</title>
 </head>
 
 <body>
